# transformer-nlp

./: .isort.cfg  .pre-commit-config.yaml  README.md  out.txt  pyproject.toml
experiment/: attention.ipynb  bigram.ipynb  playground.ipynb
transformer_nlp/: bigram.py  transformer.py  with-attention.py
